<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ripple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="underline">This is an<u>underline</u>.</string>

    <!-- <string name="google_map_api_key">place actual value in keys.xml</string> -->


    <!-- Patient Details fragment strings -->

    <string name="name"><u>Name:</u></string>
    <string name="age"><u>Age:</u></string>
    <string name="sex"><u>Sex:</u></string>
    <string name="nbc_contamination"><u>NBC-Contamination:</u></string>
    <string name="nbc"><u>NBC:</u></string>
    <string name="temp"><u>Temp:</u></string>
    <string name="pulse"><u>Pulse:</u></string>
    <string name="bp"><u>BP:</u></string>
    <string name="o2"><u>O<sub>2</sub>:</u></string>
    <string name="resp"><u>Resp:</u></string>
    <string name="pain"><u>Pain:</u></string>
    <string name="ecgrequest">Request ECG Snapshot</string>

    <!-- Settings strings -->

    <string name="ip_address_summary">Enter IP address for Broker</string>
    <string name="ip_address_title">IP address</string>
    <string name="ip_address_dialog_title">Enter IP address</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="ip_error_message">An IP address contains the format of:\n0–255.0–255.0-255.0-255 for IPv4\nOR [0-9,A-F]{1,4}::[0-9,A-F]{1,4} for IPv6 \nPlease try again.</string>
    <string name="port_number_dialog_title">Enter port number</string>
    <string name="port_number_mqtt_summary">Enter port number for Broker\'s MQTT service</string>
    <string name="port_number_rest_summary">Enter port number for Broker\'s REST service</string>
    <string name="port_number_title">Port number</string>
    <string name="image_base64_summary">Enable sending image notes as Base64 strings.</string>
    <string name="image_base64_title">Send Image as Base64</string>

    <!-- Other strings -->

    <string name="patient">Patient</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="settings">Settings</string>
    <string name="broker_settings">Broker Settings</string>
    <string name="n_a">N/A</string>
    <string name="scene">Scene</string>
    <string name="details">Details</string>
    <string name="default_patient_name">Patient Name</string>
    <string name="current">Current</string>
    <string name="History">History</string>
    <string name="patient_tag_view_description">Patient Image</string>
    <string name="paint_ok_btn">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Launch fragment strings -->
    <string name="launch_settings">Settings</string>
    <string name="launch_scenario">Scenario</string>
    <string name="launch_extra">Extra</string>
    <string name="launch_action_plan">Action Plan</string>

    <!-- Activity labels -->
    <string name="title_activity_scenario">ScenarioActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

    <!-- Patient Info strings-->
    <string name="patient_name_label">Name: </string>
    <string name="patient_name_text_default">John Doe</string>
    <string name="patient_age_label">Age: </string>
    <string name="patient_nbc_label">NBC: </string>
    <string name="patient_sex_label">Sex: </string>
    <string name="patient_triage_color_label">Triage Color:</string>
    <string name="patient_status_label">Status:</string>
    <string name="patient_info_save_changes">Save Changes</string>
    <string name="status_prompt">Choose a status</string>
    <string name="change_triage_color">Change Triage Color</string>

    <!-- Patient Current Vitals fragment strings-->
    <string name="vitals">Vitals</string>
    <string name="thermometer">Thermometer</string>
    <string name="vitals_temperature_value_default">@string/n_a</string>
    <string name="vitals_sp02_label">Sp02</string>
    <string name="vitals_sp02_value_default">@string/n_a</string>
    <string name="heart_rate">Heart rate</string>
    <string name="vitals_heartrate_value_default">@string/n_a</string>
    <string name="vitals_systolic_label">SYS</string>
    <string name="vitals_systolic_value_default">@string/n_a</string>
    <string name="vitals_diastolic_label">DIA</string>
    <string name="vitals_diastolic_value_default">@string/n_a</string>
    <string name="vitals_respiration_label">Respiration</string>
    <string name="vitals_respiration_value_default">@string/n_a</string>
    <string name="vitals_pain_label">Pain</string>
    <string name="vitals_pain_value_default">@string/n_a</string>
    <string name="title_activity_nfc">NfcActivity</string>


</resources>
