<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <PreferenceCategory android:title="@string/broker_settings">

        <EditTextPreference
            android:dialogTitle="@string/ip_address_dialog_title"
            android:key="ipAddressPref"
            android:summary="@string/ip_address_summary"
            android:digits="0123456789ABCDEF.:"
            android:inputType="textCapCharacters"
            android:title="@string/ip_address_title" />

        <EditTextPreference
            android:dialogTitle="@string/port_number_dialog_title"
            android:key="portNumberMQTTPref"
            android:summary="@string/port_number_mqtt_summary"
            android:inputType="number"
            android:title="@string/port_number_title" />

        <EditTextPreference
            android:dialogTitle="@string/port_number_dialog_title"
            android:key="portNumberRESTPref"
            android:summary="@string/port_number_rest_summary"
            android:inputType="number"
            android:title="@string/port_number_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Debug settings">
        <CheckBoxPreference
            android:title="@string/image_base64_title"
            android:summary="@string/image_base64_summary"
            android:key="prefSendBase64Image" />
    </PreferenceCategory>

</PreferenceScreen>