<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/launch_action_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_action_plan"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/launch_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_extra"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/launch_scenario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_scenario"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/launch_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_settings"
            android:layout_weight="1"
            android:textSize="40sp"
            android:layout_margin="20dp" />

    </LinearLayout>


</LinearLayout>
