<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.5"
    android:background="#FFFFFF"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/patient_layout"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/patient_tv"
            style="@style/headingfontblack"
            android:text="@string/patient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <ImageView
            android:id="@+id/tagview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/tag" />

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#000000"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setting_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settings" />

            <Button
                android:id="@+id/connect_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/connect" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:id="@+id/vital_info"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scene_tv"
            style="@style/headingfontblack"
            android:layout_gravity="center_horizontal"
            android:text="Scene" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/details_tv"
            style="@style/bodyfontblack"
            android:text="Details"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <HorizontalScrollView
            android:id="@+id/detailsHorizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="Matthew McCartney" />

                <TextView
                    android:id="@+id/age_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/age_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/nbc_contamination_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/nbc" />

                <TextView
                    android:id="@+id/nbc_contamination_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/Sex_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/sex_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:text="N/A" />

            </GridLayout>

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/current_tv"
            style="@style/bodyfontblack"
            android:text="Current"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <HorizontalScrollView
            android:id="@+id/currentVitalsHorizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/temp_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/temp_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/pulse_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:text="@string/pulse" />

                <TextView
                    android:id="@+id/pulse_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/o2_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="4"
                    android:layout_row="0"
                    android:text="@string/o2" />

                <TextView
                    android:id="@+id/o2_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="5"
                    android:layout_row="0"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/bp_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/bp" />

                <TextView
                    android:id="@+id/bp_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/resp_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:text="@string/resp" />

                <TextView
                    android:id="@+id/resp_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:text="N/A" />

                <TextView
                    android:id="@+id/pain_tv"
                    style="@style/bodyfontblack"
                    android:layout_column="4"
                    android:layout_row="1"
                    android:text="@string/pain" />

                <TextView
                    android:id="@+id/pain_value_tv"
                    style="@style/bodyfontgray"
                    android:layout_column="5"
                    android:layout_row="1"
                    android:text="N/A" />

            </GridLayout>

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/history_tv"
                style="@style/bodyfontblack"
                android:layout_marginRight="20dp"
                android:text="History"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/ecg_request_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ecgrequest"
                android:textSize="@dimen/text_small"
                android:background="#010101"
                />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</LinearLayout>
